--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-11-17 08:26:04 -0600 
+%% Created for Evan Bollig at 2013-11-17 16:52:00 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{IntelXeonPhi2013,
+	Author = {S. U. Thiagarajan AND C. Congdon AND S. Naik AND L. Q. Nguyen},
+	Date-Added = {2013-11-17 22:49:04 +0000},
+	Date-Modified = {2013-11-17 22:51:57 +0000},
+	Institution = {Intel Corporation},
+	Number = {1.5},
+	Title = {Intel Xeon Phi Coprocessor -- Developer's Quick Start Guide},
+	Type = {White paper},
+	Year = {2013}}
 
 @techreport{LiSaad2010,
 	Author = {Li, R. and Saad, Y.},
